Fixup "netcat does not support -U option"
Some nc implementations print help to stdout, others to stderr.

https://github.com/ymnk/jsch-agent-proxy/issues/31
https://github.com/ymnk/jsch-agent-proxy/pull/32